feat: add styles to all sections

--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@
               />
             </div>
             <h4 class="es-cross__item-title">
-              PARADOXE Rénergie H.C.F.
-              <span class="es-cross__item-subtitle">
-                Przeciwstarzeniowe serum<br />
-                do okolic oczu o wysokiej <br />skuteczności
-              </span>
+              Rénergie H.C.F. <br />
+              Triple Serum Eye 
             </h4>
+            <span class="es-cross__item-subtitle">
+              Przeciwstarzeniowe serum<br />
+              do okolic oczu o wysokiej <br />skuteczności
+            </span>
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -141,10 +142,8 @@
                 class="es-cross__img"
               />
             </div>
-            <h4 class="es-cross__item-title">
-              Hypnôse Drama
-              <span class="es-cross__item-subtitle">Tusz do rzęs</span>
-            </h4>
+            <h4 class="es-cross__item-title">Hypnôse Drama</h4>
+            <span class="es-cross__item-subtitle">Tusz do rzęs</span>
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -159,12 +158,12 @@
             <h4 class="es-cross__item-title">
               UV Expert Supra <br />
               Screen SPF 50+
-              <span class="es-cross__item-subtitle"
-                >Innowacyjne serum chroniące przed<br />
-                promieniami UVA, UVB oraz<br />
-                zanieczyszczeniami</span
-              >
             </h4>
+            <span class="es-cross__item-subtitle"
+              >Innowacyjne serum chroniące przed<br />
+              promieniami UVA, UVB oraz<br />
+              zanieczyszczeniami</span
+            >
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -178,10 +177,10 @@
             </div>
             <h4 class="es-cross__item-title">
               La vie est belle Rose Extraordinaire 
-              <span class="es-cross__item-subtitle">
-                Kwiatowa woda perfumowana</span
-              >
             </h4>
+            <span class="es-cross__item-subtitle">
+              Kwiatowa woda perfumowana</span
+            >
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -193,12 +192,10 @@
                 class="es-cross__img"
               />
             </div>
-            <h4 class="es-cross__item-title">
-              Idôle Tint
-              <span class="es-cross__item-subtitle">
-                Cień do powiek & róż w płynie</span
-              >
-            </h4>
+            <h4 class="es-cross__item-title">Idôle Tint</h4>
+            <span class="es-cross__item-subtitle">
+              Cień do powiek & róż w płynie</span
+            >
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
         </div>
@@ -239,10 +236,10 @@
             <h4 class="es-cross__item-title">
               Rénergie H.C.F. <br />
               Triple Serum
-              <span class="es-cross__item-subtitle">
-                Przeciwzmarszczkowe serum do twarzy
-              </span>
             </h4>
+            <span class="es-cross__item-subtitle">
+              Przeciwzmarszczkowe <br />serum do twarzy
+            </span>
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -254,10 +251,8 @@
                 class="es-cross__img"
               />
             </div>
-            <h4 class="es-cross__item-title">
-              Hypnôse Mascara
-              <span class="es-cross__item-subtitle">Tusz do rzęs</span>
-            </h4>
+            <h4 class="es-cross__item-title">Hypnôse Mascara</h4>
+            <span class="es-cross__item-subtitle">Tusz do rzęs</span>
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -269,10 +264,8 @@
                 class="es-cross__img"
               />
             </div>
-            <h4 class="es-cross__item-title">
-              La vie est belle
-              <span class="es-cross__item-subtitle">Woda perfumowana</span>
-            </h4>
+            <h4 class="es-cross__item-title">La vie est belle</h4>
+            <span class="es-cross__item-subtitle">Woda perfumowana</span>
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
 
@@ -305,10 +298,10 @@
             <h4 class="es-cross__item-title">
               Rénergie H.P.N. <br />
               300-Peptide Cream
-              <span class="es-cross__item-subtitle">
-                Wielozadaniowy krem przeciwzmarszczkowy
-              </span>
             </h4>
+            <span class="es-cross__item-subtitle">
+              Wielozadaniowy krem przeciwzmarszczkowy
+            </span>
             <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
           </div>
         </div>
@@ -322,19 +315,20 @@
               <img
                 src="images/cross-3-1.png"
                 alt="RÉNERGIE"
-                class="es-cross__img"
+                class="es-cross__img es-cross__img--range"
               />
             </div>
-            <h4 class="es-cross__item-title">
+            <h4 class="es-cross__item-title es-cross__item-title--range">
               RÉNERGIE
-              <span class="es-cross__item-subtitle">
-                Nowa era najwyższej skuteczności anti-agingu inspirowana nauką o
-                regeneracji skóry. Formuły bogate w silne składniki aktywne
-                uznane w dermatologii i medycynie estetycznej skutecznie
-                wygładzają zmarszczki, przywracają jędrność i redukują
-                przebarwienia. 
-              </span>
             </h4>
+            <span
+              class="es-cross__item-subtitle es-cross__item-subtitle--range"
+            >
+              Nowa era najwyższej skuteczności anti-agingu inspirowana nauką o
+              regeneracji skóry. Formuły bogate w silne składniki aktywne uznane
+              w dermatologii i medycynie estetycznej skutecznie wygładzają
+              zmarszczki, przywracają jędrność i redukują przebarwienia. 
+            </span>
             <a class="es-cross__link" href="#" target="_blank">Odkryj</a>
           </div>
 
@@ -343,17 +337,17 @@
               <img
                 src="images/cross-3-2.png"
                 alt="GÉNIFIQUE"
-                class="es-cross__img"
+                class="es-cross__img es-cross__img--range"
               />
             </div>
-            <h4 class="es-cross__item-title">
+            <h4 class="es-cross__item-title es-cross__item-title--range">
               GÉNIFIQUE
-              <span class="es-cross__item-subtitle"
-                >Najbardziej zaawansowana regeneracja skóry od Lancôme dla
-                silniejszej, zdrowo wyglądającej i pełnej blasku skóry.
-                Stworzona w oparciu o 20 lat badań nad mikrobiomem skóry. </span
-              >
             </h4>
+            <span class="es-cross__item-subtitle es-cross__item-subtitle--range"
+              >Najbardziej zaawansowana regeneracja skóry od Lancôme dla
+              silniejszej, zdrowo wyglądającej i pełnej blasku skóry. Stworzona
+              w oparciu o 20 lat badań nad mikrobiomem skóry. </span
+            >
             <a class="es-cross__link" href="#" target="_blank">Odkryj</a>
           </div>
 
@@ -362,17 +356,17 @@
               <img
                 src="images/cross-3-3.png"
                 alt="LA VIE EST BELLE"
-                class="es-cross__img"
+                class="es-cross__img es-cross__img--range"
               />
             </div>
-            <h4 class="es-cross__item-title">
+            <h4 class="es-cross__item-title es-cross__item-title--range">
               LA VIE EST BELLE
-              <span class="es-cross__item-subtitle"
-                >Ikoniczny zapach Julii Roberts. La vie est belle - deklaracja
-                szczęścia i radości życia zamknięta we flakonie przywołującym na
-                myśl uśmiech.</span
-              >
             </h4>
+            <span class="es-cross__item-subtitle es-cross__item-subtitle--range"
+              >Ikoniczny zapach Julii Roberts. La vie est belle - deklaracja
+              szczęścia i radości życia zamknięta we flakonie przywołującym na
+              myśl uśmiech.</span
+            >
             <a class="es-cross__link" href="#" target="_blank">Odkryj</a>
           </div>
 
@@ -381,18 +375,18 @@
               <img
                 src="images/cross-3-4.png"
                 alt="TEINT IDOLE"
-                class="es-cross__img"
+                class="es-cross__img es-cross__img--range"
               />
             </div>
-            <h4 class="es-cross__item-title">
+            <h4 class="es-cross__item-title es-cross__item-title--range">
               TEINT IDOLE
-              <span class="es-cross__item-subtitle"
-                >Podkład Teint Idole Ultra Wear zapewnia każdej cerze,
-                niezależnie od typu, problemu czy karnacji, naturalnie matowe
-                wykończenie. Pokrywa skórę najcieńszą, pozwalającą jej oddychać
-                warstewką i nie zmienia swoich właściwości przez 24 godziny
-              </span>
             </h4>
+            <span class="es-cross__item-subtitle es-cross__item-subtitle--range"
+              >Podkład Teint Idole Ultra Wear zapewnia każdej cerze, niezależnie
+              od typu, problemu czy karnacji, naturalnie matowe wykończenie.
+              Pokrywa skórę najcieńszą, pozwalającą jej oddychać warstewką i nie
+              zmienia swoich właściwości przez 24 godziny
+            </span>
             <a class="es-cross__link" href="#" target="_blank">Odkryj</a>
           </div>
         </div>
@@ -409,6 +403,169 @@
           <a class="es-banner-3__link" href="#" target="_blank"
             >ODKRYJ PRODUKTY LANCÔME</a
           >
+        </div>
+      </section>
+
+      <section class="es-cross">
+        <h2 class="es-cross__title es-title">wszystkie produkty</h2>
+        <div class="es-cross__container">
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-1.png"
+                alt="Advanced Génifique"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">Advanced Génifique</h4>
+            <span class="es-cross__item-subtitle">
+              Krem na noc regenerujący <br />barierę hydrolipidową skóry
+            </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-2.png"
+                alt="Lash Idôle"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">Lash Idôle</h4>
+            <span class="es-cross__item-subtitle">Tusz do rzęs</span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-3.png"
+                alt="La vie est belle"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">La vie est belle</h4>
+            <span class="es-cross__item-subtitle">Woda perfumowana</span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-4.png"
+                alt="Teint Idole Ultra Wear "
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">
+              Teint Idole <br />
+              Ultra Wear
+              <span class="es-cross__item-subtitle"
+                >Podkład o pełnym kryciu</span
+              >
+            </h4>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-5.png"
+                alt="Rénergie H.P.N. 300-Peptide Cream"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">
+              Rénergie H.P.N. <br />
+              300-Peptide Cream
+            </h4>
+            <span class="es-cross__item-subtitle">
+              Wielozadaniowy krem przeciwzmarszczkowy
+            </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-6.png"
+                alt="Hypnôse Mascara"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">Hypnôse Mascara</h4>
+            <span class="es-cross__item-subtitle"> Tusz do rzęs </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-7.png"
+                alt="Rénergie Yeux"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">Rénergie Yeux</h4>
+            <span class="es-cross__item-subtitle">
+              Przeciwzmarszczkowy krem pod oczy
+            </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-8.png"
+                alt="Rénergie H.C.F. Triple Serum"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">
+              Rénergie H.C.F. <br />
+              Triple Serum
+            </h4>
+            <span class="es-cross__item-subtitle">
+              Przeciwzmarszczkowe serum do twarzy
+            </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-9.png"
+                alt="Teint Idole Ultra Wear Care & Glow"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">
+              Teint Idole Ultra Wear <br />Care & Glow
+            </h4>
+            <span class="es-cross__item-subtitle">
+              Rozświetlający podkład
+            </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
+
+          <div class="es-cross__single">
+            <div class="es-cross__packshot">
+              <img
+                src="images/cross-4-10.png"
+                alt="Rénergie H.P.N. 300-Peptide Cream"
+                class="es-cross__img"
+              />
+            </div>
+            <h4 class="es-cross__item-title">
+              Rénergie H.C.F. <br />
+              Triple Serum Eye
+            </h4>
+            <span class="es-cross__item-subtitle">
+              Przeciwstarzeniowe serum do okolic oczu o wysokiej skuteczności
+            </span>
+            <a class="es-cross__link" href="#" target="_blank">Kup teraz</a>
+          </div>
         </div>
       </section>
     </div>
