--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img
           class="es-banner__image"
           src="images/banner.svg"
-          alt="PRADA logo"
+          alt="Lancome logo"
         />
       </section>
 
