feat: add additional slides

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section class="es-slider">
         <div class="es-slider__slides es-slick-carousel">
-          <div class="es-slider__slide">
+          <div class="es-slider__slide es-slider__slide--first">
             <div class="es-slider__slider-content">
               <p class="es-slider__title">HYPNÔSE DRAMA</p>
               <p class="es-slider__description">
@@ -43,11 +43,25 @@
 
           <div class="es-slider__slide">
             <div class="es-slider__slider-content">
-              <p class="es-slider__title">HYPNÔSE DRAMA</p>
-              <p class="es-slider__description">
-                Ekstremalna objętość, maksymalny <br />efekt drama
-              </p>
-              <a class="es-slider__link" href="#" target="_blank">odkryj</a>
+              <a class="" href="#" target="_blank">
+                <img
+                  class="es-slider__image"
+                  src="./images/slider-image-2.png"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="es-slider__slide">
+            <div class="es-slider__slider-content">
+              <a class="" href="#" target="_blank">
+                <img
+                  class="es-slider__image"
+                  src="./images/slider-image-3.png"
+                  alt=""
+                />
+              </a>
             </div>
           </div>
         </div>
@@ -206,7 +220,7 @@
           <iframe
             class="es-video__player es-video__player--mobile"
             src="https://www.youtube.com/embed/FeVXUGJraRI"
-            title="Vichy Liftactiv B3 Serum Sposób użycia"
+            title="RÉNERGIE H.C.F. TRIPLE SERUM EYE"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
@@ -214,7 +228,7 @@
           <iframe
             class="es-video__player es-video__player--desktop"
             src="https://www.youtube.com/embed/FeVXUGJraRI"
-            title="Vichy Liftactiv B3 Serum Sposób użycia"
+            title="RÉNERGIE H.C.F. TRIPLE SERUM EYE"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
