feat: add links to category section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Superpharm - Prada</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Superpharm - Lancome</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -112,7 +110,9 @@
               src="images/category-image-1.jpg"
               alt="Pielęgnacja"
             />
-            <div class="es-category__item-title">Pielęgnacja</div>
+            <a class="es-category__item-link" href="#" target="_blank">
+              <div class="es-category__item-title">Pielęgnacja</div>
+            </a>
           </div>
           <div class="es-category__item">
             <img
@@ -120,8 +120,9 @@
               src="images/category-image-2.jpg"
               alt="Makijaż"
             />
-            <div class="es-category__item-title">Makijaż</div>
-            <div class="es-category__item-button"></div>
+            <a class="es-category__item-link" href="#" target="_blank">
+              <div class="es-category__item-title">Makijaż</div>
+            </a>
           </div>
           <div class="es-category__item">
             <img
@@ -129,8 +130,9 @@
               src="images/category-image-3.jpg"
               alt="ZAPACHY"
             />
-            <div class="es-category__item-title">ZAPACHY</div>
-            <div class="es-category__item-button"></div>
+            <a class="es-category__item-link" href="#" target="_blank">
+              <div class="es-category__item-title">ZAPACHY</div>
+            </a>
           </div>
         </div>
       </section>
