feat: change image

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           <div class="es-cross__single">
             <div class="es-cross__packshot">
               <img
-                src="images/cross-4-9.png"
+                src="images/cross-4-9.jpg"
                 alt="Teint Idole Ultra Wear Care & Glow"
                 class="es-cross__img"
               />
